feat: Add video generation, generation history, and deployment configs
- Add video generation API endpoint and workflow
- Implement generation history tracking
- Add Railway and Vercel deployment configurations
- Update UI with new features and branding
- Clean up documentation files
- Update .gitignore to exclude uploads, results, and pycache
- Add requirements.txt for Python dependencies

--- a/adflow-ai/.gitignore
+++ b/adflow-ai/.gitignore
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# pipelex
+.pipelex/
+
+# uploads and results
+/public/uploads/
+/results/
